# kafka-topic-analyzer

./: Cargo.toml
src/: kafka.rs  main.rs  metric.rs
