[package]
edition = "2018"
name = "kafka-topic-analyzer"
version = "0.5.0"
authors = ["Mario Mueller <mario@xenji.com>"]
repository = "https://github.com/xenji/kafka-topic-analyzer"
license = "MIT"
keywords = ["cli", "kafka"]
categories = ["command-line-utilities"]
description = "An analyzer for getting metrics about the contents of a Apache Kafka topic"

[dependencies]
clap = {git = "https://github.com/clap-rs/clap"}
log = "0.4.8"
prettytable-rs = "0.8.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.10"
indicatif = "0.14.0"
rdkafka = { version = "0.23.1", features = ["cmake-build"] }
bit-set = "0.5.1"

[features]
# We re-export the dynamic linking feature here to enable the user of this tool to decide wheter
# they opt into using the on-the-fly-compilation or dynamic linking.
# Details: https://github.com/fede1024/rust-rdkafka/#installation
dynamic_linking = ["rdkafka/dynamic_linking"]
